src/styles/Home.module.css
.main {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 6rem;
  min-height: 100vh;
}


/* hero styling */
.hero {
  width: 100vw;
  height: 10vh;
  border: 1px solid red;
}

.heroImage {
  width: 10%;
  height: 10%;
}


/* events grid styling */
.eventsGrid {
  display: grid;
  gap: 1rem;
  grid-auto-rows: 180px;
  }

@media (min-width: 700px) {
  .eventsGrid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1000px) {
  .eventsGrid {
    grid-template-columns: repeat(3, 1fr);
  }
}

